--- a/downStyle.css
+++ b/downStyle.css
@@ -29,7 +29,7 @@ html, body {
   top: 0%;
   left: 0%;
   background-color: black;
-  background-image: url("background.jpg");
+  background-image: url("static/background.jpg");
 }
 
 #intro-msg {
@@ -79,7 +79,7 @@ html, body {
 }
 
 #red {
-  background-color: tomato;
+  background-color: rgb(201,0,0);
 }
 
 #green {
@@ -90,3 +90,41 @@ body {
   background-color: black;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 100; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
